--- a/frontendRedcomex/.env.production
+++ b/frontendRedcomex/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=http://ec2-44-202-39-79.compute-1.amazonaws.com:4567
+VITE_API_BASE_URL=https://ec2-44-202-39-79.compute-1.amazonaws.com/api
